<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
   style="@style/Theme.Colour"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="9000dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraint_layout"
            android:layout_width="match_parent"
            android:layout_height="9000dp"
            android:background="#A9BFDF"
            tools:context=".drawer_class">

            <!-- Title TextView -->

            <ImageButton
                android:id="@+id/menu_button"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:contentDescription="@string/menu"
                android:src="@drawable/ic_menu"
                app:layout_constraintBottom_toTopOf="@+id/title_text"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.024"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/ogtext"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="177dp"
                android:layout_marginEnd="177dp"
                android:text="@string/textview"
                android:textIsSelectable="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.537"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/preview_selected_color" />

            <TextView
                android:id="@+id/shadetext"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="177dp"
                android:layout_marginTop="12dp"
                android:layout_marginEnd="177dp"
                android:text="TextView"
                android:textIsSelectable="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/preview_shade_color" />

            <TextView
                android:id="@+id/comptext"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="177dp"
                android:layout_marginTop="9dp"
                android:layout_marginEnd="177dp"
                android:text="TextView"
                android:textIsSelectable="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/preview_comp_color" />

            <!-- Information TextView -->

            <!-- RadioGroup -->
            <TextView
                android:id="@+id/title_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="48dp"
                android:text="@string/gauts_colour_picker"
                android:textAllCaps="true"
                android:textColor="#5D3FD3"
                android:textSize="35sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/info_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:text="Choose colour or enter hex code"
                android:textColor="#333333"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.495"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/title_text" />

            <RadioGroup
                android:id="@+id/radio_group"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintBottom_toTopOf="@id/editText"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/info_text">

                <RadioButton
                    android:id="@+id/hex"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Enter Hexcode"
                    android:textColor="#5D3FD3" />

                <RadioButton
                    android:id="@+id/pick"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Use Colour Picker"
                    android:textColor="#5D3FD3" />
            </RadioGroup>

            <!-- EditText for Hex Code -->
            <EditText
                android:id="@+id/editText"
                android:layout_width="240dp"
                android:layout_height="wrap_content"
                android:backgroundTint="#5D3FD3"
                android:enabled="false"
                android:hint="Hexcode.."
                android:maxLength="10"
                android:padding="16dp"
                android:textColor="#333333"
                app:layout_constraintBottom_toTopOf="@id/selected_color_text"
                app:layout_constraintEnd_toStartOf="@id/pick_color_button"
                app:layout_constraintHorizontal_bias="0.3"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/radio_group" />

            <!-- ImageButton for Color Picker -->

            <!-- Selected Color Preview -->
            <ImageButton
                android:id="@+id/pick_color_button"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_marginStart="36dp"
                android:backgroundTint="#5D3FD3"
                android:enabled="false"
                android:scaleType="centerInside"
                android:src="@drawable/img"
                app:layout_constraintBottom_toBottomOf="@id/editText"
                app:layout_constraintStart_toEndOf="@id/editText"
                app:layout_constraintTop_toTopOf="@id/editText"
                app:layout_constraintVertical_bias="0.444" />

            <!-- Tint Color Preview -->

            <TextView
                android:id="@+id/selected_color_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/selected_color"
                android:textColor="#333333"
                app:layout_constraintBottom_toTopOf="@id/preview_selected_color"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.512"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/editText" />

            <View
                android:id="@+id/preview_selected_color"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_marginTop="20dp"
                android:background="@android:color/darker_gray"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.504"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/selected_color_text" />

            <TextView
                android:id="@+id/tint_color_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:text="TINT COLOUR"
                android:textColor="#333333"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.506"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/preview_selected_color" />

            <View
                android:id="@+id/preview_tint_color"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:background="@android:color/darker_gray"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tint_color_text" />

            <!-- Shade Color Preview -->

            <TextView
                android:id="@+id/shade_color_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="44dp"
                android:text="SHADE"
                android:textColor="#333333"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/preview_tint_color" />

            <View
                android:id="@+id/preview_shade_color"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:background="@android:color/darker_gray"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/shade_color_text" />

            <!-- Complementary Color Preview -->

            <!-- SeekBar Label -->

            <!-- SeekBar -->

            <TextView
                android:id="@+id/comp_color_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="48dp"
                android:text="@string/complimentary_colour"
                android:textColor="#333333"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/preview_shade_color" />

            <View
                android:id="@+id/preview_comp_color"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_marginTop="12dp"
                android:background="@android:color/darker_gray"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.501"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/comp_color_text" />

            <TextView
                android:id="@+id/seekbar_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="104dp"
                android:text="@string/adjust_intensity"
                android:textColor="#5D3FD3"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.492"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/comp_color_text" />

            <SeekBar
                android:id="@+id/seekBar"
                android:layout_width="240dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:progressTint="#5D3FD3"
                android:thumbTint="#5D3FD3"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.497"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/seekbar_label" />

            <TextView
                android:id="@+id/tinttext"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="177dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="177dp"
                android:text="TextView"
                android:textIsSelectable="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/preview_tint_color" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>
    <com.google.android.material.navigation.NavigationView
        android:id="@+id/navigation_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        app:menu="@menu/drawer_menu"
        app:headerLayout="@layout/drawer_item_instructions"
        android:background="@color/bg" />


</androidx.drawerlayout.widget.DrawerLayout>

